--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,6 +1,5 @@
 .home__bg{
-    background-image: url(https://images.unsplash.com/photo-1530811761207-8d9d22f0a141?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
-    height: 80vh;
+    /* background-image: url(https://images.unsplash.com/photo-1530811761207-8d9d22f0a141?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80); */
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -17,7 +16,7 @@
 
 @media only screen and (max-width: 767px) {
     .home__bg{
-        background-image: url(https://images.unsplash.com/photo-1530811761207-8d9d22f0a141?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
+        /* background-image: url(https://images.unsplash.com/photo-1530811761207-8d9d22f0a141?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80); */
         background-size: contain;
         border-radius: 20%;
         box-shadow: none;
