--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -1,6 +1,6 @@
 .login__bg{
-    background-image: url(https://images.unsplash.com/photo-1509822929063-6b6cfc9b42f2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);
-    height: 80vh;
+    /* background-image: url(https://images.unsplash.com/photo-1509822929063-6b6cfc9b42f2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80); */
+    /* height: 80vh; */
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
